; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_dmlab_act.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_dmlab_act.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, double*)* @dmlab_act to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dmlab_act(i8* %0, i32* %1, double* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca double*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store double* %2, double** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @dmlab_act_discrete(i8* %7, i32* %8)
  %10 = load i8*, i8** %4, align 8
  %11 = load double*, double** %6, align 8
  %12 = call i32 @dmlab_act_continuous(i8* %10, double* %11)
  ret void
}

declare dso_local i32 @dmlab_act_discrete(i8*, i32*) #1

declare dso_local i32 @dmlab_act_continuous(i8*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
